See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.84.00

              Add pamaltsat.  Thanks Anton Shepelev <anton.txt@gmail.com>.

              Add pamtris.  Thanks Lucas Brunno Luna
              <lucaslunar32@hotmail.com>.

              pbmtext: -wchar works with built-in fonts.

              pbmtext: improved -verbose information about BDF fonts:
              include CHARSET_REGISTRY, CHARSET_ENCODING.

              libnetpbm font facilities: built-in fonts work with wide
              characters.

              pbmtext; libnetpbm BDF font processing: fix invalid memory
              reference when BDF font file has invalid syntax.  Broken
              in primordial Netpbm, ca 1993.

              pamgetcolor: fix bug: gets color of only the top half of a
              region.

18.06.30 BJH  Release 10.83.00

              Add pamlevels.  Thanks Anton Shepelev <anton.txt@gmail.com>.

              Add pamgetcolor.  Thanks Anton Shepelev <anton.txt@gmail.com>.

              Add rgb-<maxval>:r/g/b color specification format.

              pngtopam: Fix bogus warning of non-square pixels when image does
              not contain pixel resolution information.  Introduced in Netpbm
              10.48 (September 2009).

              pstopnm: Fix divide-by-zero crash when Postscript input says
              the image has zero size.

              pstopnm: Fix divide-by-zero crash when computed resolution
              rounds down to zero dots per inch.

              pbmmask: Fix invalid memory reference with zero-dimension
              input image.  Broken in primordial Netpbm, ca 1989.

              libnetpbm: Add pnm_colorspec_rgb_integer,
              pnm_colorspec_rgb_norm, pnm_colorspec_rgb_x11,
              pnm_colorspec_dict, pnm_colorspec_dict_close.

              libnetpbm: Add pnm_parsecolor2.
